--- a/index.html
+++ b/index.html
@@ -2,105 +2,109 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="theme-color" content="#0b3a75" />
   <title>해랑에너지 | 태양광 수익 예측</title>
 
-  <link rel="stylesheet" href="./style.css?v=3" />
-  <link rel="manifest" href="./manifest.webmanifest?v=3" />
-  <meta name="theme-color" content="#0b3a6e" />
+  <link rel="manifest" href="./manifest.webmanifest" />
+  <link rel="icon" href="./logo.png" />
+  <link rel="apple-touch-icon" href="./logo.png" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
-  <div class="wrap">
-
-    <header class="header">
-      <div class="brand">
-        <img src="./logo.png?v=3" alt="해랑에너지 로고" class="brand-logo" />
-        <div class="brand-text">
-          <h1>해랑에너지</h1>
-          <p>태양광 발전·수익 예측 대시보드</p>
-        </div>
+  <header class="topbar">
+    <div class="brand">
+      <img class="logo" src="./logo.png" alt="해랑에너지 로고" />
+      <div>
+        <h1>해랑에너지</h1>
+        <p class="sub">태양광 발전·수익 예측 대시보드</p>
+        <p class="hint">기본값: 월 평균 일사량 <b>3.6시간</b> · 시스템 효율 <b>0.90</b></p>
       </div>
-      <div class="header-info">기본값: 월 평균 일사량 3.6시간 · 시스템 효율 0.90</div>
-    </header>
+    </div>
+  </header>
 
+  <main class="wrap">
     <section class="card">
       <h2>입력</h2>
 
       <div class="grid">
-        <label class="field">
+        <label>
           <span>설비용량 (kW)</span>
-          <input id="capacityKw" type="number" min="0" step="0.1" value="20" />
+          <input id="capKw" type="number" step="0.1" value="20" />
         </label>
 
-        <label class="field">
+        <label>
           <span>월 평균 일사량 (시간/일)</span>
-          <input id="sunHours" type="number" min="0" step="0.1" value="3.6" />
+          <input id="psh" type="number" step="0.1" value="3.6" />
         </label>
 
-        <label class="field">
+        <label>
           <span>시스템 효율 (0~1)</span>
-          <input id="eff" type="number" min="0" max="1" step="0.01" value="0.90" />
+          <input id="eff" type="number" step="0.01" value="0.90" />
         </label>
 
-        <label class="field">
+        <label>
           <span>자가소비 비율 (0~1)</span>
-          <input id="selfUseRatio" type="number" min="0" max="1" step="0.01" value="0.30" />
+          <input id="selfRatio" type="number" step="0.01" value="0.30" />
         </label>
 
-        <label class="field">
+        <label>
           <span>전기요금 단가 (원/kWh)</span>
-          <input id="kwhPrice" type="number" min="0" step="1" value="180" />
+          <input id="tariff" type="number" step="1" value="180" />
         </label>
 
-        <label class="field">
+        <label>
           <span>SMP 단가 (원/kWh)</span>
-          <input id="smpPrice" type="number" min="0" step="1" value="110" />
+          <input id="smp" type="number" step="1" value="110" />
         </label>
 
-        <label class="field">
+        <label>
           <span>REC 환산 (원/kWh)</span>
-          <input id="recPerKwh" type="number" min="0" step="1" value="70" />
+          <input id="rec" type="number" step="1" value="70" />
         </label>
 
-        <label class="field">
+        <label>
           <span>월 일수</span>
-          <input id="daysInMonth" type="number" min="28" max="31" step="1" value="30" />
+          <input id="days" type="number" step="1" value="30" />
         </label>
       </div>
 
       <div class="actions">
-        <button id="calcBtn">계산하기</button>
+        <button id="calcBtn" class="primary">계산하기</button>
         <button id="resetBtn" class="ghost">기본값으로</button>
+      </div>
+
+      <div class="note small">
+        ※ 본 계산은 평균 일사량 기반 추정치입니다. 실제 발전량은 음영, 온도, 오염, 출력제어, 선로제약 등 현장 변수에 따라 달라질 수 있습니다.
       </div>
     </section>
 
     <section class="card">
       <h2>결과</h2>
 
-      <div class="results">
-        <div class="row"><span>일 예상 발전량</span><strong id="dailyKwh">-</strong></div>
-        <div class="row"><span>월 예상 발전량</span><strong id="monthlyKwh">-</strong></div>
-
-        <hr/>
-
-        <div class="row"><span>월 절감액(자가소비)</span><strong id="savingWon">-</strong></div>
-        <div class="row"><span>월 SMP 수익(잉여판매)</span><strong id="smpWon">-</strong></div>
-        <div class="row"><span>월 REC 수익(추정)</span><strong id="recWon">-</strong></div>
-
-        <hr/>
-
-        <div class="row big"><span>월 총 수익(추정)</span><strong id="totalWon">-</strong></div>
+      <div class="result">
+        <div class="row"><span>일 예상 발전량</span><b id="outDayKwh">-</b></div>
+        <div class="row"><span>월 예상 발전량</span><b id="outMonKwh">-</b></div>
+        <hr />
+        <div class="row"><span>월 절감액(자가소비)</span><b id="outSave">-</b></div>
+        <div class="row"><span>월 SMP 수익(잉여판매)</span><b id="outSmp">-</b></div>
+        <div class="row"><span>월 REC 수익(추정)</span><b id="outRec">-</b></div>
+        <hr />
+        <div class="row total"><span>월 총 수익(추정)</span><b id="outTotal">-</b></div>
       </div>
-
-      <p class="note">
-        ※ 본 계산은 평균 일사량 기반 추정치입니다. 실제 발전량은 음영, 온도, 오염, 출력제어, 선로제약 등 현장 변수에 따라 달라질 수 있습니다.
-      </p>
     </section>
+  </main>
 
-    <footer class="footer"><small>© 해랑에너지</small></footer>
-  </div>
+  <footer class="footer">© 해랑에너지</footer>
 
-  <script src="./app.js?v=3"></script>
+  <script src="./app.js" defer></script>
+  <script>
+    // PWA(Service Worker) 등록
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => navigator.serviceWorker.register("./sw.js").catch(() => {}));
+    }
+  </script>
 </body>
 </html>
+
