--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <meta name="theme-color" content="#0b3a75" />
   <title>해랑에너지 | 태양광 수익 예측</title>
+
   <link rel="manifest" href="./manifest.webmanifest" />
   <link rel="icon" href="./logo.png" />
+  <link rel="apple-touch-icon" href="./logo.png" />
   <link rel="stylesheet" href="./style.css" />
 </head>
+
 <body>
   <header class="topbar">
     <div class="brand">
-      <img class="logo" src="./logo.png" alt="해랑에너지 로고">
+      <img class="logo" src="./logo.png" alt="해랑에너지 로고" />
       <div>
         <div class="brandTitle">해랑에너지</div>
         <div class="brandSub">지역·월 기반 일사량(PSH) + 실측 검증</div>
+        <div class="hint">기본값: 시스템효율 <b>100%</b> · 자가소비 <b>0%</b> · 전기요금 <b>200</b> · SMP <b>120</b> · REC <b>70</b></div>
       </div>
     </div>
   </header>
@@ -37,13 +41,13 @@
 
         <div class="field">
           <label>기본 일사량(PSH, 시간/일)</label>
-          <input id="psh" type="number" step="0.1" min="0">
+          <input id="psh" type="number" step="0.1" min="0" value="3.6">
           <div class="hint">지역·월 선택 시 자동 입력됩니다(필요 시 수정 가능).</div>
         </div>
 
         <div class="field">
           <label>시스템 효율(%)</label>
-          <input id="systemEff" type="number" step="1" min="1" max="100" value="85">
+          <input id="systemEff" type="number" step="1" min="1" max="100" value="100">
         </div>
       </div>
     </section>
@@ -64,17 +68,17 @@
 
         <div class="field">
           <label>자가소비 비율(%)</label>
-          <input id="selfRatio" type="number" step="1" value="30">
+          <input id="selfRatio" type="number" step="1" value="0">
         </div>
 
         <div class="field">
           <label>전기요금 단가(원/kWh)</label>
-          <input id="tariff" type="number" step="1" value="180">
+          <input id="tariff" type="number" step="1" value="200">
         </div>
 
         <div class="field">
           <label>SMP 단가(원/kWh)</label>
-          <input id="smp" type="number" step="1" value="110">
+          <input id="smp" type="number" step="1" value="120">
         </div>
 
         <div class="field">
@@ -92,7 +96,7 @@
 
     <section class="card">
       <h2 class="h2">결과</h2>
-      <div class="resultBox" id="resultBox">
+      <div class="resultBox">
         <div class="row"><span>일 예상 발전량</span><b id="outDayKwh">-</b></div>
         <div class="row"><span>월 예상 발전량</span><b id="outMonKwh">-</b></div>
         <hr>
@@ -108,9 +112,9 @@
       <h2 class="h2">검증(실측 대비 오차율)</h2>
       <div class="grid2">
         <div class="field">
-          <label>실제 월 발전량(kWh) 입력(인버터/모니터링)</label>
+          <label>실제 월 발전량(kWh)</label>
           <input id="actualMonKwh" type="number" step="1" placeholder="예: 2700">
-          <div class="hint">입력하면 예측 대비 오차율이 자동 계산됩니다.</div>
+          <div class="hint">인버터/모니터링 값을 입력하면 오차율이 자동 계산됩니다.</div>
         </div>
 
         <div class="field">
@@ -119,28 +123,6 @@
           <div class="hint">오차율 = (예측-실제)/실제 × 100</div>
         </div>
       </div>
-    </section>
-
-    <section class="card">
-      <h2 class="h2">날씨(API) 연동</h2>
-      <p class="muted tiny">
-        GitHub Pages에서는 API 키를 숨길 수 없어, 보통 Cloudflare Worker/Apps Script로 중계합니다.
-        (아래는 연결 구조 안내입니다)
-      </p>
-      <div class="grid2">
-        <div class="field">
-          <label>관측소/지점코드(선택)</label>
-          <input id="stn" type="text" placeholder="예: 133 (지점번호)">
-        </div>
-        <div class="field">
-          <label>조회 기간(YYYYMMDD~YYYYMMDD)</label>
-          <input id="dateRange" type="text" placeholder="예: 20260101-20260131">
-        </div>
-      </div>
-      <div class="btnRow">
-        <button id="fetchObsBtn" class="ghost">관측데이터 불러오기(연동 준비)</button>
-      </div>
-      <div class="tiny muted" id="apiStatus">연동 전(프록시 URL 설정 필요)</div>
     </section>
   </main>
 
